--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,14 @@
 body {
-    height: 100vh;
-    width: 100wh;
-    font-family: 'Open Sans', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(250, 241, 229);
-    color: rgb(255, 160, 43);
+  height: 100vh;
+  width: 100wh;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(255, 160, 43);
 }
 
 #main {
-    text-align: center;
-    font-size: 2em;
+  text-align: center;
+  font-size: 2em;
 }
